--- a/index.html
+++ b/index.html
@@ -1,177 +1,200 @@
 <!DOCTYPE html>
 <html lang="ru">
+    <head>
+        <meta charset="UTF-8" />
 
-<head>
-    <meta charset="UTF-8" />
-
-    <!-- Мета теги -->
-    <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> -->
-    <!-- <meta property="og:url" content="https://mama-doma.by">
+        <!-- Мета теги -->
+        <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> -->
+        <!-- <meta property="og:url" content="https://mama-doma.by">
 		<meta property="og:title" content="КАФЕ НА ФУДКОРТАХ МАМА ДОМА">
 		<meta property="og:description" content="Если Мама Дома - значит еда будет вкусной и полезной!">
 		<meta property="og:type" content="website"> -->
-    <!-- <meta property="og:image" content="/img/meta_img.jpg">
+        <!-- <meta property="og:image" content="/img/meta_img.jpg">
 		<link rel="canonical" href="http://mama-doma.by">
 		<meta property="fb:app_id" content="257953674358265">
 		<meta name="format-detection" content="telephone=no"> -->
-    <!-- <meta http-equiv="x-dns-prefetch-control" content="on"> -->
-    <!-- _________________________ -->
+        <!-- <meta http-equiv="x-dns-prefetch-control" content="on"> -->
+        <!-- _________________________ -->
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Мама дома - Минск</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="font/stylesheet.css" />
-    <link rel="stylesheet" href="style/style.css" />
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=b0ef4691-ef56-4fa7-88fb-d774eb4837e1&lang=ru_RU"
-        type="text/javascript"></script>
-</head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Мама дома - Минск</title>
+        <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="font/stylesheet.css" />
+        <link rel="stylesheet" href="style/style.css" />
+        <script
+            src="https://api-maps.yandex.ru/2.1/?apikey=b0ef4691-ef56-4fa7-88fb-d774eb4837e1&lang=ru_RU"
+            type="text/javascript"
+        ></script>
+    </head>
 
-<body>
-    <h1 class="visuallyhidden">Мама дома</h1>
-    <header class="header" id="header">
-        <div class="header__intro">
-            <video class="header__intro-video" src="/video/videoplayback.mp4" poster="/img/bg_no_youtube.jpg" autoplay
-                muted loop></video>
-        </div>
-        <div class="wrapper__header">
-            <div class="header__top">
-                <a href="#" class="logo">
-                    <img src="/img/newLogo.PNG" alt="мама дома" />
-                </a>
-                <nav class="header__navigation">
-                    <ul class="navigatin">
-                        <li class="navigatin__link"><a href="#menu">Меню</a></li>
-                        <li class="navigatin__link"><a href="#">Доставка</a></li>
-                        <li class="navigatin__link"><a href="#mapTo">Рестораны на фудкортах</a></li>
-                        <li class="navigatin__link"><a href="#about-us">Работа</a></li>
-                        <li class="navigatin__link"><a href="#about-us">Контакты</a></li>
-                        <li class="navigatin__link"><a href="#feedback">Отзывы</a></li>
-                    </ul>
-                </nav>
+    <body>
+        <h1 class="visuallyhidden">Мама дома</h1>
+        <header class="header" id="header">
+            <div class="header__intro">
+                <video
+                    class="header__intro-video"
+                    src="/video/videoplayback.mp4"
+                    poster="/img/bg_no_youtube.jpg"
+                    autoplay
+                    muted
+                    loop
+                ></video>
+            </div>
+            <div class="wrapper__header">
+                <div class="header__top">
+                    <a href="#" class="logo">
+                        <img src="/img/newLogo.PNG" alt="мама дома" />
+                    </a>
+                    <nav class="header__navigation">
+                        <ul class="navigatin">
+                            <li class="navigatin__link"><a href="#menu">Меню</a></li>
+                            <li class="navigatin__link"><a href="#">Доставка</a></li>
+                            <li class="navigatin__link"><a href="#mapTo">Рестораны на фудкортах</a></li>
+                            <li class="navigatin__link"><a href="#about-us">Работа</a></li>
+                            <li class="navigatin__link"><a href="#about-us">Контакты</a></li>
+                            <li class="navigatin__link"><a href="#feedback">Отзывы</a></li>
+                        </ul>
+                    </nav>
 
-                <div class="header__region">
-                    <div class="header__language">
-                        <a href="#" class="header__language_active">РУС</a>
-                        <span></span>
-                        <a href="#">БЕЛ</a>
-                    </div>
-                    <div class="region__now">
-                        <span class="ico ico_region"></span>
-                        <div class="region__now_label">Минск</div>
-                    </div>
-                    <div class="dropdown">
-                        <a class="dropbtn">Регионы</a>
-                        <div class="dropdown-content">
-                            <a href="#">Брест</a>
-                            <a href="#">Гомель</a>
-                            <a href="#">Могилев</a>
+                    <div class="header__region">
+                        <div class="header__language">
+                            <a href="#" class="header__language_active">РУС</a>
+                            <span></span>
+                            <a href="#">БЕЛ</a>
+                        </div>
+                        <div class="region__now">
+                            <span class="ico ico_region"></span>
+                            <div class="region__now_label">Минск</div>
+                        </div>
+                        <div class="dropdown">
+                            <a class="dropbtn">Регионы</a>
+                            <div class="dropdown-content">
+                                <a href="#">Брест</a>
+                                <a href="#">Гомель</a>
+                                <a href="#">Могилев</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="wrapper__gif">
+                    <img src="../../img/GIF.gif" class="gif" />
+                </div>
+                <div class="promo__title">
+                    <p class="promo__title-year _anim-items _anim-no-hide">Работаем с 2015 года</p>
+                    <span class="promo__title-span _anim-items _anim-no-hide"></span>
+                    <p class="promo__title-description _anim-items _anim-no-hide">— Домашняя кухня в быстром формате —</p>
+                </div>
             </div>
-            <div class="wrapper__gif">
-                <img src="../../img/GIF.gif" class="gif" />
+        </header>
+        <section class="feedback" id="feedback">
+            <a href="#header" class="arrow-to-top" id="arrowToTop">
+                <img src="/img/icons/up-arrow.png" alt="стрелка вверх" />
+            </a>
+            <div class="wrapper feedback__wrapper">
+                <h2>— Наши ссылки —</h2>
+                <div class="feedback__layout layout-2-column">
+                    <div class="feedback__to-menu">
+                        <a href="#" class="feedback__links link__to-menu _anim-items"></a>
+                    </div>
+                    <div class="feedback__to-feedback">
+                        <a href="#popup" class="feedback__links link__to-feedback _anim-items popup-link"></a>
+                    </div>
+                </div>
             </div>
-            <div class="promo__title">
-                <p class="promo__title-year _anim-items _anim-no-hide">Работаем с 2015 года</p>
-                <span class="promo__title-span _anim-items _anim-no-hide"></span>
-                <p class="promo__title-description _anim-items _anim-no-hide">— Домашняя кухня в быстром формате —</p>
+        </section>
+        <section class="menu" id="menu">
+            <div class="menu__wrapper wrapper">
+                <div class="menu__title">
+                    <h2>— Меню —</h2>
+                </div>
+                <div class="menu__layout layout-3-column">
+                    <div class="menu__item">
+                        <a class="menu__links menu__to-0 _anim-items" href="#"></a>
+                    </div>
+                    <div class="menu__item">
+                        <a class="menu__links menu__to-1 _anim-items" href="#"></a>
+                    </div>
+                    <div class="menu__item">
+                        <a class="menu__links menu__to-2 _anim-items" href="#"></a>
+                    </div>
+                    <div class="menu__item">
+                        <a class="menu__links menu__to-3 _anim-items" href="#"></a>
+                    </div>
+                    <div class="menu__item">
+                        <a class="menu__links menu__to-4 _anim-items" href="#"></a>
+                    </div>
+                    <div class="menu__item">
+                        <a class="menu__links menu__to-5 _anim-items" href="#"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about-us" id="about-us">
+            <div class="about-us__wrapper wrapper layout-2-column">
+                <div class="about-us__work about-us__items _anim-items">
+                    <a href="#" class="logo">
+                        <img src="/img/newLogo.PNG" alt="мама дома" />
+                    </a>
+                    <h3>С нами приятно работать!</h3>
+                    <span>Станьте частью нашей команды</span>
+                    <button class="about-us__button">Оставьте заявку</button>
+                </div>
+                <div class="about-us__instagram about-us__items _anim-items">
+                    <a href="#" class="logo_instagram">
+                        <img src="/img/icons/instagram.png" alt="instagram" />
+                    </a>
+                    <h3>Наш инстаграм</h3>
+                    <span>Подписывайтесь, и Вам плюс в карму</span>
+                    <button class="about-us__button">Перейти в инстаграмм</button>
+                </div>
+            </div>
+        </section>
+        <section class="map" id="mapTo">
+            <div class="map__wrapper wrapper">
+                <div class="map__title">
+                    <h2>— Наши рестораны на фудкортах —</h2>
+                </div>
+                <div class="map__yandex">
+                    <div id="map" style="width: 100%; height: 600px"></div>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="footer__wrapper wrapper">
+                <span class="footer__logo"></span>
+                <div class="footer__contacts">
+                    <div class="footer__mail footer__items">
+                        <a href="#"><span class="ico ico_mail"></span>director@mama-doma.by</a>
+                    </div>
+                    <div class="footer__phone footer__items">
+                        <a href="#"><span class="ico ico_phone"></span>+375 (17) 224 84 41</a>
+                    </div>
+                </div>
+            </div>
+            <div class="wrapper footer__wrapper_developer">
+                <a href="#">Политика конфиденциальности</a>
+                <span>Сайт разработан <a href="#"> Qwes</a></span>
+            </div>
+        </footer>
+        <div id="popup" class="popup">
+            <div class="popup__body">
+                <div class="popup__content">
+                    <a href="#arrowToTop" class="popup__close close-popup">X</a>
+                    <div class="popup__title">Оставьте свой отзыв</div>
+                    <p class="popup__text">Заполните поля и оставьте отзыв о нас</p>
+                    <form class="popup__form">
+                        <input type="text" />
+                        <input type="number" name="" id="" />
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                        <button>Оставить отзыв</button>
+                    </form>
+                    <p class="popup__text">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности</p>
+                </div>
             </div>
         </div>
-    </header>
-    <section class="feedback" id="feedback">
-        <a href="#header" class="arrow-to-top">
-            <img src="/img/icons/up-arrow.png" alt="стрелка вверх" />
-        </a>
-        <div class="wrapper feedback__wrapper">
-            <h2>— Наши ссылки —</h2>
-            <div class="feedback__layout layout-2-column">
-                <div class="feedback__to-menu">
-                    <a href="#" class="feedback__links link__to-menu _anim-items"></a>
-                </div>
-                <div class="feedback__to-feedback">
-                    <a href="#" class="feedback__links link__to-feedback _anim-items"></a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="menu" id='menu'>
-        <div class="menu__wrapper wrapper">
-            <div class="menu__title">
-                <h2>— Меню —</h2>
-            </div>
-            <div class="menu__layout layout-3-column">
-                <div class="menu__item">
-                    <a class="menu__links menu__to-0 _anim-items" href="#"></a>
-                </div>
-                <div class="menu__item">
-                    <a class="menu__links menu__to-1 _anim-items" href="#"></a>
-                </div>
-                <div class="menu__item">
-                    <a class="menu__links menu__to-2 _anim-items" href="#"></a>
-                </div>
-                <div class="menu__item">
-                    <a class="menu__links menu__to-3 _anim-items" href="#"></a>
-                </div>
-                <div class="menu__item">
-                    <a class="menu__links menu__to-4 _anim-items" href="#"></a>
-                </div>
-                <div class="menu__item">
-                    <a class="menu__links menu__to-5 _anim-items" href="#"></a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="about-us" id="about-us">
-        <div class="about-us__wrapper wrapper layout-2-column">
-            <div class="about-us__work about-us__items _anim-items">
-                <a href="#" class="logo">
-                    <img src="/img/newLogo.PNG" alt="мама дома" />
-                </a>
-                <h3>С нами приятно работать!</h3>
-                <span>Станьте частью нашей команды</span>
-                <button class="about-us__button">Оставьте заявку</button>
-            </div>
-            <div class="about-us__instagram about-us__items _anim-items">
-                <a href="#" class="logo_instagram">
-                    <img src="/img/icons/instagram.png" alt="instagram" />
-                </a>
-                <h3>Наш инстаграм</h3>
-                <span>Подписывайтесь, и Вам плюс в карму</span>
-                <button class="about-us__button">Перейти в инстаграмм</button>
-            </div>
-        </div>
-    </section>
-    <section class="map" id="mapTo">
-        <div class="map__wrapper wrapper">
-            <div class="map__title">
-                <h2>— Наши рестораны на фудкортах —</h2>
-            </div>
-            <div class="map__yandex">
-                <div id="map" style="width: 100%; height: 600px"></div>
-            </div>
-        </div>
-    </section>
-    <footer class="footer">
-        <div class="footer__wrapper wrapper">
-            <span class="footer__logo"></span>
-            <div class="footer__contacts">
-                <div class="footer__mail footer__items">
-                    <a href="#"><span class="ico ico_mail"></span>director@mama-doma.by</a>
-                </div>
-                <div class="footer__phone footer__items">
-                    <a href="#"><span class="ico ico_phone"></span>+375 (17) 224 84 41</a>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper footer__wrapper_developer">
-            <a href="#">Политика конфиденциальности</a>
-            <span>Сайт разработан <a href="#"> Qwes</a></span>
-        </div>
-    </footer>
-    <script src="animationScroll.js"></script>
-    <script src="ancors.js"></script>
-    <script src="yandexMap.js"></script>
-</body>
-
+        <script src="animationScroll.js"></script>
+        <script src="ancors.js"></script>
+        <script src="popup.js"></script>
+        <script src="yandexMap.js"></script>
+    </body>
 </html>
