--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 		<meta name="format-detection" content="telephone=no"> -->
         <!-- <meta http-equiv="x-dns-prefetch-control" content="on"> -->
         <!-- _________________________ -->
+        <!-- на время -->
+        <meta http-equiv="cache-control" content="no-cache" />
+        <meta http-equiv="expires" content="0" />
+        <meta http-equiv="pragma" content="no-cache" />
+        <!-- на время -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
         <title>Мама дома - Минск</title>
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
@@ -100,10 +105,20 @@
                 <h2>— Доставка —</h2>
                 <div class="feedback__layout-delivery layout-2-column">
                     <div class="feedback__to-menu">
-                        <a href="#" class="feedback__links link__to-menu _anim-items"></a>
+                        <a
+                            href="https://www.menu.by/search/quick.html?term=мама+дома+"
+                            rel="nofollow noopener"
+                            target="_blank"
+                            class="feedback__links link__to-menu _anim-items"
+                        ></a>
                     </div>
                     <div class="feedback__to-menu">
-                        <a href="#" class="feedback__links link__to-menu _anim-items"></a>
+                        <a
+                            href="https://www.menu.by/search/quick.html?term=мама+дома+"
+                            rel="nofollow noopener"
+                            target="_blank"
+                            class="feedback__links link__to-menu _anim-items"
+                        ></a>
                     </div>
                     <div class="feedback__to-feedback"></div>
                 </div>
@@ -168,17 +183,70 @@
                     <div class="feedback__contacts _anim-items">
                         <div class="contacts__item">
                             <div>
-                                <h4>ТРЦ “Dana Mall”, фудкорт 3 этаж</h4>
-                                <p>просп. Партизанский, 150а, станция метро sdf sd dsf</p>
-                                <a href="tel:+375222222222">+375 29 601 22 26</a>
+                                <h4>ТЦ “МОМО”, фудкорт 2 этаж</h4>
+                                <p>просп. Партизанский, 150а, станция метро Магилевская</p>
                             </div>
                             <span class="ico ico_place"></span>
                         </div>
                         <div class="contacts__item">
                             <div>
                                 <h4>ТРЦ “Dana Mall”, фудкорт 3 этаж</h4>
-                                <p>просп. Партизанский, 150а, станция sdf sd dsf</p>
-                                <a href="tel:+375222222222">+375 29 601 22 26</a>
+                                <p>ул. Мстиславца, 11, станция метро Восток</p>
+                            </div>
+                            <span class="ico ico_place"></span>
+                        </div>
+                        <div class="contacts__item">
+                            <div>
+                                <h4>ТРЦ “Galileo”, фудкорт 3 этаж</h4>
+                                <p>ул. Бобруйская, 6, станция метро плошщаль Ленина</p>
+                            </div>
+                            <span class="ico ico_place"></span>
+                        </div>
+                        <div class="contacts__item">
+                            <div>
+                                <h4>ТРЦ “Palazzo”, фудкорт 3 этаж</h4>
+                                <p>ул. Тимиряева, 74А</p>
+                            </div>
+                            <span class="ico ico_place"></span>
+                        </div>
+                        <div class="contacts__item">
+                            <div>
+                                <h4>Гомель, ТРЦ “Секрет”, 1 этаж</h4>
+                                <p>ул. Гагарина, 65</p>
+                            </div>
+                            <span class="ico ico_place"></span>
+                        </div>
+                        <div class="contacts__item">
+                            <div>
+                                <h4>Брест, ТЦ “ЦУМ”, 3 этаж</h4>
+                                <p>просп. Машерова, 17</p>
+                            </div>
+                            <span class="ico ico_place"></span>
+                        </div>
+                        <div class="contacts__item">
+                            <div>
+                                <h4>Могилев, ТЦ “Парк Сити”, фудкорт 1 этаж</h4>
+                                <p>Минское шоссе, 31</p>
+                            </div>
+                            <span class="ico ico_place"></span>
+                        </div>
+                        <div class="contacts__item">
+                            <div>
+                                <h4>Хочешь работать у нас?</h4>
+                                <p>
+                                    Звони на номер <a href="tel:+375293713141">+ 375 29 371 31 41</a> или заполни
+                                    <a href="#about-us">анкету</a> на сайте
+                                </p>
+                            </div>
+                            <span class="ico ico_question"></span>
+                        </div>
+                        <div class="contacts__item">
+                            <div>
+                                <h4>Центральный офис в Минске</h4>
+                                <p>
+                                    ООО “ФемилиФуд” Республика Беларусь, 220125, Минск, пр. Независимости, 185, офис 8 (вход со стороны ул.
+                                    Острошицкая, в торце здания на вывеску Promofilm)
+                                </p>
                             </div>
                             <span class="ico ico_place"></span>
                         </div>
@@ -209,10 +277,10 @@
                 <span class="footer__logo"></span>
                 <div class="footer__contacts">
                     <div class="footer__mail footer__items">
-                        <a href="#"><span class="ico ico_mail"></span>director@mama-doma.by</a>
+                        <a href="mail:hr@mama-doma.by"><span class="ico ico_mail"></span>hr@mama-doma.by</a>
                     </div>
                     <div class="footer__phone footer__items">
-                        <a href="#"><span class="ico ico_phone"></span>+375 (17) 224 84 41</a>
+                        <a href="tel:+375447933141"><span class="ico ico_phone"></span>+375 (44) 793 31 41 </a>
                     </div>
                 </div>
             </div>
@@ -268,6 +336,7 @@
         <script src="js/yandexMap.js"></script>
         <script src="js/animationScroll.js"></script>
         <script src="js/ancors.js"></script>
+        <script src="js/hover.js"></script>
         <script src="js/popup.js"></script>
         <script src="js/lib/inputmask.min.js"></script>
         <script src="js/mask.js"></script>
